# agentic-testops

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: application-brief.md  demo-walkthrough.md  github-action.md  project-brief.md  real-world-evaluation.md  release-checklist.md  sample-buggy-calculator-fixes.patch  sample-buggy-calculator-report.json  sample-buggy-calculator-report.md  sample-flaky-pipeline-report.json  sample-flaky-pipeline-report.md  sample-service-health-fixes.patch  sample-service-health-report.json  sample-service-health-report.md  sample-task-tracker-fixes.patch  sample-task-tracker-report.json  sample-task-tracker-report.md
docs/real-world/: boltons-modern-pytest-collection.md  more-itertools-nth-combination-exception.json  more-itertools-nth-combination-exception.md  tabulate-asciidoc-trailing-whitespace.md
examples/buggy_calculator/: calculator.py  test_calculator.py
examples/flaky_pipeline/: pipeline.py  test_pipeline.py
examples/service_health/: service_health.py  test_service_health.py
examples/task_tracker/: task_tracker.py  test_task_tracker.py
scripts/: evaluate_real_world.py  render_media.py
src/agentic_testops/: __init__.py  cli.py  diagnoser.py  fixer.py  flake.py  llm.py  models.py  parser.py  patcher.py  reporter.py  runner.py  verifier.py
tests/: test_action_metadata.py  test_cli.py  test_diagnoser.py  test_fixer.py  test_flake.py  test_llm.py  test_parser.py  test_patcher.py  test_project_hygiene.py  test_reporter.py  test_runner.py  test_verifier.py
