[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-testops"
version = "0.1.0"
description = "Agentic TestOps for Python projects: automated pytest execution, failure diagnosis, and repair advice."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Agentic TestOps Contributors" }]
keywords = ["agentic", "testops", "pytest", "debugging", "ai-infra"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentic-testops = "agentic_testops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
